--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
@@ -161,8 +161,8 @@ Trigger.1 = Name:StartCenterTankXferToLeftInner#Target:LeftInner#Threshold:1651.
 Trigger.2 = Name:StartCenterTankXferToRightInner#Target:RightInner#Threshold:1651.5#Condition:TankQuantityBelow#EffectTrue:OpenValve.AutoCenterTransferValveR
 Trigger.3 = Name:StopCenterTankXferToLeftInner#Target:LeftInner#Threshold:1815#Condition:TankQuantityAbove#EffectTrue:CloseValve.AutoCenterTransferValveL
 Trigger.4 = Name:StopCenterTankXferToRightInner#Target:RightInner#Threshold:1815#Condition:TankQuantityAbove#EffectTrue:CloseValve.AutoCenterTransferValveR
-Trigger.5 = Name:StartLeftOuterXferToLeftInner#Target:LeftInner#Threshold:246.8#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2
-Trigger.6 = Name:StartRightOuterXferToRightInner#Target:RightInner#Threshold:246.8#Condition:TankQuantityBelow#EffectTrue:OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
+Trigger.5 = Name:StartOuterXferLeftInnerTrigger#Target:LeftInner#Threshold:246.8#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2,OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
+Trigger.6 = Name:StartOuterXferRightInnerTrigger#Target:RightInner#Threshold:246.8#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2,OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
 Trigger.7 = Name:StopLeftOuterXferToLeftInner#Target:LeftInner#Threshold:468#Condition:TankQuantityAbove#EffectTrue:CloseValve.LeftTransferValve1,CloseValve.LeftTransferValve2
 Trigger.8 = Name:StopRightOuterXferToRightInner#Target:RightInner#Threshold:468#Condition:TankQuantityAbove#EffectTrue:CloseValve.RightTransferValve1,CloseValve.RightTransferValve2
 Trigger.9 = Name:CloseCenterTankValves5MinAfterLowFuelLevel#Target:Center#Threshold:42.8#Condition:TankQuantityBelow#DelayTrue:300#EffectTrue:CloseValve.AutoCenterTransferValveL,CloseValve.AutoCenterTransferValveR
