revert changes on A32NX's PFD

--- a/fbw-a32nx/src/systems/instruments/src/PFD/config.json
+++ b/fbw-a32nx/src/systems/instruments/src/PFD/config.json
@@ -1,9 +1,4 @@
 {
   "index": "./instrument.tsx",
-  "name": "MFD",
-  "dimensions": {
-    "width": 768,
-    "height": 1024
-  },
-  "isInteractive": true
+  "isInteractive": false
 }
