integrate fbw-common; add confirmation dialog; tweak PERF pages further

--- a/fbw-a380x/src/systems/tsconfig.json
+++ b/fbw-a380x/src/systems/tsconfig.json
@@ -17,6 +17,7 @@
       "@datalink/router": ["../../../fbw-common/src/systems/datalink/router/src/index.ts"],
       "@shared/*": ["./shared/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
+      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"]
     }
   },
 }
