--- a/fbw-a32nx/src/systems/instruments/src/EFB/tsconfig.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "resolveJsonModule" : true
-  }
+    "resolveJsonModule" : true,
+    "skipLibCheck": true
+  },
+  "include": ["*.tsx", "*.ts"],
+  "exclude": ["vite.config.ts"]
+
 }
