--- a/tools/fdr2csv/CMakeLists.txt
+++ b/tools/fdr2csv/CMakeLists.txt
@@ -9,27 +9,27 @@ include_directories(
         "${CMAKE_SOURCE_DIR}/src"
         "${CMAKE_SOURCE_DIR}/src/commandline"
         "${CMAKE_SOURCE_DIR}/src/fmt/include"
-        "${CMAKE_SOURCE_DIR}/../fbw_a320/src"
-        "${CMAKE_SOURCE_DIR}/../fbw_a320/src/model"
-        "${CMAKE_SOURCE_DIR}/../fbw_common/src/zlib"
+        "${CMAKE_SOURCE_DIR}/../../fbw-a32nx/src/wasm/fbw_a320/src"
+        "${CMAKE_SOURCE_DIR}/../../fbw-a32nx/src/wasm/fbw_a320/src/model"
+        "${CMAKE_SOURCE_DIR}/../../fbw-common/src/wasm/fbw_common/src/zlib"
 )
 
 add_executable(
         fdr2csv
-        ../fbw_common/src/zlib/adler32.c
-        ../fbw_common/src/zlib/crc32.c
-        ../fbw_common/src/zlib/deflate.c
-        ../fbw_common/src/zlib/gzclose.c
-        ../fbw_common/src/zlib/gzlib.c
-        ../fbw_common/src/zlib/gzread.c
-        ../fbw_common/src/zlib/gzwrite.c
-        ../fbw_common/src/zlib/infback.c
-        ../fbw_common/src/zlib/inffast.c
-        ../fbw_common/src/zlib/inflate.c
-        ../fbw_common/src/zlib/inftrees.c
-        ../fbw_common/src/zlib/trees.c
-        ../fbw_common/src/zlib/zfstream.cc
-        ../fbw_common/src/zlib/zutil.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/adler32.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/crc32.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/deflate.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/gzclose.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/gzlib.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/gzread.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/gzwrite.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/infback.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/inffast.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/inflate.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/inftrees.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/trees.c
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/zfstream.cc
+        ../../fbw-common/src/wasm/fbw_common/src/zlib/zutil.c
         src/commandline/CommandLine.cpp
         src/fmt/src/format.cc
         src/fmt/src/os.cc
