--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/react-dom": "~17.0.8",
     "@types/react-router-dom": "~5.1.7",
     "@types/semver": "^7.3.13",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "~4.14.2",
     "@typescript-eslint/parser": "~4.14.2",
     "@vitejs/plugin-react": "^1.2.0",
