fix: make apu pump electric to work when apu is not running

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
@@ -449,9 +449,11 @@ circuit.75 = Type:CIRCUIT_FUEL_VALVE:8#Connections:bus.1#Power:3, 5, 20.0#Name:F
 circuit.76 = Type:CIRCUIT_XML:16#Connections:bus.12#Power:3, 5, 20.0#Name:HotBatteryCircuit ; Hot Battery Circuit 5W
 circuit.77 = Type:CIRCUIT_XML:17#Connections:bus.7#Power:3, 5, 20.0#Name:WipersLeft ; Wipers 5W
 circuit.78 = Type:CIRCUIT_AVIONICS#Connections:bus.9#Power:0.5,1,20.0#Name:Avionics ; Avionics
+circuit.79 = Type:CIRCUIT_FUEL_PUMP:7#Connections:bus.1#Power:3, 5, 20.0#Name:Fuel_Pump_APU ; Fuel Pump 5W
 
 ; Standby Instrument ISIS (panel.xml)
-circuit.79 = Type:CIRCUIT_SAI:1#Connections:bus.1#Power:25, 30, 20.0#Name:SAI_1 ; Standby Indicator
+; this is throwing an error (CIRCUIT_SAI not defined) can be removed==
+;circuit.79 = Type:CIRCUIT_SAI:1#Connections:bus.1#Power:25, 30, 20.0#Name:SAI_1 ; Standby Indicator
 
 circuit.80 = Type:CIRCUIT_XML:18#Connections:bus.8#Power:3, 5, 20.0#Name:WipersRight ; Wipers 5W
 
