Fix JS module build scripts to know about all env vars

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "a32nx",
   "version": "0.11.0",
   "edition": "development",
+  "imports": {
+    "#build-utils": "./build-utils.js"
+  },
   "scripts": {
     "====== A320 =================": "==========================================",
 
