--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv": "^8.2.0",
     "es5lib": "^0.1.1",
-    "esbuild-sass-plugin": "^2.4.0",
+    "esbuild": "^0.17.15",
+    "esbuild-plugin-copy": "^2.0.2",
     "eslint": "^7.21.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^24.4.0",
@@ -173,7 +174,7 @@
     "immer": "^9.0.3",
     "lodash": "^4.17.20",
     "msfs-geo": "^0.1.0-alpha3",
-    "msfs-navdata": "^1.2.1",
+    "msfs-navdata": "^1.2.4",
     "nanoid": "^3.3.1",
     "network": "^0.6.1",
     "pdf-to-printer": "^5.1.1",
