--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -12,11 +12,11 @@ Night = 233,166,134
 Luminous = 201,64,64
 
 [VCockpit01]
-size_mm = 768,1024
-pixel_size = 768,1024
+size_mm = 768,768
+pixel_size = 768,768
 texture = $PFD
 
-htmlgauge00 = A380X/MFD/mfd.html?Index=1, 0,0,768,1024
+htmlgauge00 = A32NX/PFD/pfd.html?Index=1, 0,0,768,768
 
 [VCockpit02]
 size_mm = 768,768
