Tune crossbleed starting speed

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/engines.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/engines.cfg
@@ -69,7 +69,7 @@ min_n2_for_combustion = 20 ; % - Minimum N2 required to maintain a combustion
 min_n1_for_starter_cutoff = 200 ; % - Minimum N1 at which the starter is automatically disabled
 min_n2_for_starter_cutoff = 200 ; % - Minimum N2 at which the starter is automatically disabled
 min_n2_for_apu_bleed_air_cutoff = 200 ; % - Minimum N2 at which the APU Bleed Air is automatically disabled
-n2_from_bleed_air_psi_table = 0:0, 4:8, 10:18, 18:25 ; Table which contains the n2 generated depending on the pression from the bleed air from the APU (in psi).
+n2_from_bleed_air_psi_table = 80:0, 84:9, 90:18, 96:23, 102:25 ; Table which contains the n2 generated depending on the pression from the bleed air from the APU (in psi).
 bleed_air_on_n2_tc = 1 ; Time constant which contains the speed at which the bleed air pressure affect the N2 of the turbine.
 fuel_flow_max_itt_factor = 2.0
 fuel_flow_min_itt_factor = 0.9
