--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
@@ -496,7 +496,7 @@ engine_map = 1,1 ; pumps on Eng1,2
 
 [PNEUMATIC_SYSTEM]
 max_pressure = 18
-apu_max_pressure = 45
+apu_max_pressure = 102 ; Designed to reach the maximum N2 of the engine in n2_from_bleed_air_psi_table of engines.cfg
 bleed_air_scalar = 1
 
 [PITOT_STATIC]
