fix: delete source textures after build for more space on runners

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,6 +1,6 @@
 name: master
 on:
- push:
+  push:
     branches:
       - master
 
@@ -37,6 +37,7 @@ jobs:
         run: |
           ./scripts/dev-env/run.sh ./scripts/setup.sh
           ./scripts/dev-env/run.sh ./scripts/build_a32nx.sh --no-tty -j 4
+          rm -rf fbw-a32nx/src/textures
       - name: Build ZIP files
         run: |
           ./scripts/dev-env/run.sh node ./scripts/fragment_a32nx.js
