fix: delete whole src after build

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           ./scripts/dev-env/run.sh ./scripts/setup.sh
           ./scripts/dev-env/run.sh ./scripts/build.sh --no-tty -j 4
-          rm -rf fbw-a32nx/src/textures
+          rm -rf fbw-a32nx/src
       - name: Generate install.json
         run: |
           ./scripts/dev-env/run.sh node ./scripts/fragment_a32nx.js
