--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           ./scripts/dev-env/run.sh ./scripts/setup.sh
           ./scripts/dev-env/run.sh ./scripts/build_a32nx.sh --no-tty -j 4
-          rm -rf fbw-a32nx/src/textures
+          rm -rf fbw-a32nx/src
       - name: Build ZIP files
         run: |
           ./scripts/dev-env/run.sh node ./scripts/fragment_a32nx.js
