--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,6 +1,6 @@
 name: master
 on:
- push:
+  push:
     branches:
       - master
 
@@ -37,8 +37,10 @@ jobs:
         run: |
           ./scripts/dev-env/run.sh ./scripts/setup.sh
           ./scripts/dev-env/run.sh ./scripts/build_a32nx.sh --no-tty -j 4
+          rm -rf fbw-a32nx/src
       - name: Build ZIP files
         run: |
+          df -h
           ./scripts/dev-env/run.sh node ./scripts/fragment_a32nx.js
           cp ./fbw-a32nx/out/build-modules/modules.json ./fbw-a32nx/out/flybywire-aircraft-a320-neo/install.json
           ./scripts/dev-env/run.sh node ./scripts/install-source_a32nx.js
