feat: gsx config

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/GSX.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/GSX.cfg
@@ -32,7 +32,10 @@ embeddedStair = 0
 remove = 1
 
 [exit3]
-remove = 1
+pos = -1.60 -16.15 0.97 -12.00
+code = 3
+name = Passenger Aft Door
+embeddedStair = 0
 
 [exit4]
 remove = 1
