--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -65,6 +65,7 @@ jobs:
           ./scripts/dev-env/run.sh ./scripts/build.sh --no-tty -j 4
           rm -rf fbw-a32nx/src
       - name: Generate install.json
+        if: github.event.pull_request.auto_merge == false
         run: |
           df -h
           ./scripts/dev-env/run.sh node ./scripts/fragment_a32nx.js
@@ -73,6 +74,7 @@ jobs:
           ./scripts/dev-env/run.sh node ./scripts/install-source_a32nx.js
       - name: Upload PR artifact
         uses: actions/upload-artifact@v2
+        if: github.event.pull_request.auto_merge == false
         with:
           name: A32NX
           path: ./fbw-a32nx/out/flybywire-aircraft-a320-neo/
