GSX EFB Integration - Requesting Catering and Refueling Truck now supported - Requesting boarding through EFB now supported - Disabled Services baggage button when GSX Payload Sync Enabled - Reworked operative window checking so it's now reactive to the external toggle rather than guessing - Disable aft passenger door - Set ULDCode for fwd cargo door to AKH according to spec - prevented rust code from emitting `stop_boarding` - Moved pushback pages to dedicated folder - Added option for enabling GSX Pushback - Page for GSX Pushback (WIP)

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/GSX.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/GSX.cfg
@@ -32,13 +32,15 @@ embeddedStair = 0
 remove = 1
 
 [exit3]
-pos = -1.60 -16.15 0.97 -12.00
-code = 3
-name = Passenger Aft Door
-embeddedStair = 0
+remove = 1
 
 [exit4]
 remove = 1
+; Re-enable when the left aft door is animated
+;pos = -1.60 -16.15 0.97 -12.00
+;code = 3
+;name = Passenger Aft Door
+;embeddedStair = 0
 
 [service1]
 remove = 1
@@ -54,7 +56,7 @@ pos = 0.85 5.50 -0.40 -0.39
 code = 6
 name = Cargo Door
 embeddedStair = 0
-uldcode = BELT
+uldcode = AKH
 
 [cargo2]
 remove = 1
