--- a/fbw-a32nx/src/systems/fmgc/tsconfig.json
+++ b/fbw-a32nx/src/systems/fmgc/tsconfig.json
@@ -1,13 +1,3 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "ESNext",
-    "noEmit": true,
-    "typeRoots": ["../../../../fbw-common/src/typings"]
-  },
-  "include": [
-    "src/**/*",
-    "../../../../fbw-common/src/typings/**/*.d.ts"
-  ]
+  "extends": "../tsconfig.json"
 }
