--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "eslint-plugin-tailwindcss": "^1.17.0",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.1.0",
-    "jest": "^27.4.7",
+    "jest": "^29.7.0",
     "jsdom": "^16.4.0",
     "lint-staged": "10.4.0",
     "postcss": "^8.4.5",
@@ -140,12 +140,12 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "tailwindcss": "^3.0.23",
-    "ts-jest": "^27.0.4",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.2",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
-    "vite-plugin-replace": "^0.1.1",
-    "vite-tsconfig-paths": "^3.4.1",
+    "vite-plugin-filter-replace": "^0.1.12",
+    "vite-tsconfig-paths": "^4.2.1",
     "webpack": "^5.12.2",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1"
