--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -54,22 +54,25 @@ jobs:
           CDN_BUCKET_DESTINATION: addons/a32nx/master
         run: |
           ./scripts/cf-cdn.sh $CDN_BUCKET_DESTINATION ./fbw-a32nx/out/build-modules
-    #  - name: Delete old GitHub Pre-Release assets
-    #    uses: mknejp/delete-release-assets@v1
-    #    with:
-    #      token: ${{ github.token }}
-    #      tag: ${{ env.MASTER_PRE_RELEASE_TAG }}
-    #      assets: "*"
-    #      fail-if-no-assets: false
-    #  - name: Upload aircraft package to GitHub Pre-Release Assets
-    #    uses: actions/upload-release-asset@v1.0.2
-    #    env:
-    #      GITHUB_TOKEN: ${{ github.token }}
-    #    with:
-    #      upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.MASTER_PRE_RELEASE_ID }}/assets{?name,label}
-    #      asset_path: ./${{ env.BUILD_DIR_NAME }}/${{ env.MASTER_ZIP_NAME }}
-    #      asset_name: ${{ env.MASTER_ZIP_NAME }}
-    #      asset_content_type: application/zip
+      - name: Delete old GitHub Pre-Release assets
+        uses: mknejp/delete-release-assets@v1
+        run: gh release delete ${{ env.MASTER_PRE_RELEASE_TAG }} '*' -y
+        #with:
+        #  token: ${{ github.token }}
+        #  tag: ${{ env.MASTER_PRE_RELEASE_TAG }}
+        #  assets: "*"
+        #  fail-if-no-assets: false
+
+      - name: Upload aircraft package to GitHub Pre-Release Assets
+        # uses: actions/upload-release-asset@v1.0.2
+        # env:
+        #   GITHUB_TOKEN: ${{ github.token }}
+        run: gh release upload ${{ env.MASTER_PRE_RELEASE_TAG }} '*'
+        #with:
+        #  upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.MASTER_PRE_RELEASE_ID }}/assets{?name,label}
+        #  asset_path: ./${{ env.BUILD_DIR_NAME }}/${{ env.MASTER_ZIP_NAME }}
+        #  asset_name: ${{ env.MASTER_ZIP_NAME }}
+        #  asset_content_type: application/zip
     #  - name: Upload fragments to GitHub Pre-Release Assets
     #    uses: dwenegar/upload-release-assets@v1
     #    env:
