--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -16,7 +16,7 @@ jobs:
       BUILD_DIR_NAME: stable
     steps:
       - name: Checkout source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Create .env file
         run: |
           echo A32NX_PRODUCTION_BUILD=1 >> fbw-a32nx/.env
@@ -43,7 +43,6 @@ jobs:
           cd ../..
       - name: Create Release
         id: create_release
-
         run: |
           gh api
             --method POST
@@ -66,8 +65,8 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             --hostname HOSTNAME \
-            /repos/OWNER/REPO/releases/$release_id/assets?name=${{ env.RELEASE_ZIP_NAME }} \
+            /repos/flybywiresim/aircraft/releases/$release_id/assets?name=${{ env.RELEASE_ZIP_NAME }} \
             -f '@./${{ env.BUILD_DIR_NAME }}/${{ env.RELEASE_ZIP_NAME }}'
-        uses: actions/upload-release-asset@v1.0.2
+        #uses: actions/upload-release-asset@v1.0.2
         env:
           GITHUB_TOKEN: ${{ github.token }}
