--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
@@ -88,6 +88,7 @@ fuel_type = 2 ; 1 = OCTANE 100, 2 = JET_A, 3 = OCTANE 80, 4 = AUTO GAS, 5 = JET 
 [FUEL_SYSTEM]
 Version = 4
 APU.1 = Name:APU#FuelBurnRate:33
+APU.2 = Name:ASU#FuelBurnRate:0 #Needs to exist for preliminary Ground Air support
 Engine.1 = Name:LeftEngine#Index:1
 Engine.2 = Name:RightEngine#Index:2
 Tank.1 = Name:Center#Title:TT:MENU.FUEL.CENTER#Capacity:2179#UnusableCapacity:0#Position:-4.5,0,1#Priority:1#OutputOnlyLines:TankCenterToCenterTankJetPumpL,TankCenterToCenterTankJetPumpR
@@ -133,6 +134,9 @@ Line.35 = Name:LeftOuterTankToLeftXferValve2#Source:LeftOuter#Destination:LeftTr
 Line.36 = Name:RightOuterTankToRightXferValve2#Source:RightOuter#Destination:RightTransferValve2#GravityBasedFuelFlow:600
 Line.37 = Name:LeftXferValve2ToLeftInnerTank#Source:LeftTransferValve2#Destination:LeftInner#GravityBasedFuelFlow:600
 Line.38 = Name:RightXferValve2ToRightInnerTank#Source:RightTransferValve2#Destination:RightInner#GravityBasedFuelFlow:600
+Line.39 = Name:ASUValveToASU#Source:ASUValve#Destination:ASU#Volume:0.001
+Line.40 = Name:ASUPumpToASUValve#Source:ASUPump#Destination:ASUValve#Volume:0.001
+Line.41 = Name:LeftInnerToASUPump#Source:LeftInner#Destination:ASUPump#Volume:0.001
 Junction.1 = Name:LeftJunction#InputOnlyLines:PumpLeft1ToJuncLeft,PumpLeft2ToJuncLeft#OutputOnlyLines:JuncLeftToEngValveLeft
 Junction.2 = Name:APUJunction#OutputOnlyLines:JuncAPUToAPUPump
 Junction.3 = Name:RightJunction#InputOnlyLines:PumpRight1ToJuncRight,PumpRight2ToJuncRight#OutputOnlyLines:JuncRightToEngValveRight
@@ -150,6 +154,7 @@ Valve.9 = Name:CenterTransferDisableValveL#DestinationLine:CenterXferDisableValv
 Valve.10 = Name:CenterTransferDisableValveR#DestinationLine:CenterXferDisableValveRToCenterXferJunctionR#Circuit:10 ; When overhead transfer button is OFF, this valve is closed and disables fuel flow in both manual and automatic modes
 Valve.11 = Name:AutoCenterTransferValveL#DestinationLine:AutoCenterXferValveLToLeftInner#Circuit:11
 Valve.12 = Name:AutoCenterTransferValveR#DestinationLine:AutoCenterXferValveRToRightInner#Circuit:12
+Valve.13 = Name:ASUValve#OpeningTime:1#Circuit:13
 Pump.1 = Name:CenterTankJetPumpL#Pressure:10#DestinationLine:CenterTankJetPumpLToCenterXferDisableValveL#TankFuelRequired:Center#Type:Electric#Index:1
 Pump.2 = Name:LeftInnerTankPump1#Pressure:25#DestinationLine:PumpLeft1ToJuncLeft#TankFuelRequired:LeftInner#Type:Electric#Index:3
 Pump.3 = Name:RightInnerTankPump1#Pressure:25#DestinationLine:PumpRight1ToJuncRight#TankFuelRequired:RightInner#Type:Electric#Index:4
@@ -157,6 +162,7 @@ Pump.4 = Name:CenterTankJetPumpR#Pressure:10#DestinationLine:CenterTankJetPumpRT
 Pump.5 = Name:LeftInnerTankPump2#Pressure:25#DestinationLine:PumpLeft2ToJuncLeft#TankFuelRequired:LeftInner#Type:Electric#Index:5
 Pump.6 = Name:RightInnerTankPump2#Pressure:25#DestinationLine:PumpRight2ToJuncRight#TankFuelRequired:RightInner#Type:Electric#Index:6
 Pump.7 = Name:APUPump#Pressure:15#DestinationLine:APUPumpToAPUValve#TankFuelRequired:LeftInner#Type:Electric#Index:7
+Pump.8 = Name:ASUPump#Pressure:15#DestinationLine:ASUPumpToASUValve#TankFuelRequired:LeftInner#Type:Electric#Index:8
 Trigger.1 = Name:StartCenterTankXferToLeftInner#Target:LeftInner#Threshold:1651.5#Condition:TankQuantityBelow#EffectTrue:OpenValve.AutoCenterTransferValveL
 Trigger.2 = Name:StartCenterTankXferToRightInner#Target:RightInner#Threshold:1651.5#Condition:TankQuantityBelow#EffectTrue:OpenValve.AutoCenterTransferValveR
 Trigger.3 = Name:StopCenterTankXferToLeftInner#Target:LeftInner#Threshold:1815#Condition:TankQuantityAbove#EffectTrue:CloseValve.AutoCenterTransferValveL
