fix: type fixes, part 1

--- a/fbw-a32nx/src/systems/tsconfig.json
+++ b/fbw-a32nx/src/systems/tsconfig.json
@@ -24,7 +24,7 @@
       "@shared/*": ["./shared/src/*"],
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
-      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"]
+      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"],
     }
   },
 }
