--- a/fbw-a32nx/src/systems/instruments/src/Clock/tsconfig.json
+++ b/fbw-a32nx/src/systems/instruments/src/Clock/tsconfig.json
@@ -1,6 +1,5 @@
 {
-    "extends": "../../../tsconfig.json",
-
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
       "incremental": false /* Enables incremental builds */,
       "target": "es2017" /* Specifies the ES2017 target, compatible with Coherent GT */,
