--- a/fbw-a32nx/src/systems/instruments/tsconfig.json
+++ b/fbw-a32nx/src/systems/instruments/tsconfig.json
@@ -1,12 +1,3 @@
-
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "resolveJsonModule" : true,
-    "noEmit": true,
-  },
-  "include": [
-    "src/**/*",
-    "../../../../../../fbw-common/src/typings/**/*.d.ts"
-  ]
+  "extends": "../tsconfig.json"
 }
