fix: type fixes, part 2

--- a/fbw-a32nx/src/systems/tsconfig.json
+++ b/fbw-a32nx/src/systems/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2017",
     "baseUrl": ".",
     "resolveJsonModule" : true,
     "skipLibCheck": true,
