build: add bundles/ to .eslintignore

--- a/.eslintignore
+++ b/.eslintignore
@@ -25,3 +25,5 @@ fbw-a380x/out/*
 # TODO: these need to be more granular
 fbw-a32nx/src/base/*
 fbw-a380x/src/base/*
+fbw-a32nx/bundles/*
+fbw-a380x/bundles/*
