build: add typechecking to instruments and modules (#8238)
* build: add typechecking to instruments/modules

* ci: enable typechecking in PR builds

* build: bump some vite dependencies

* build: fix typechecking errors not showing up in igniter output

* build: bump dependencies

* fix: type fixes, part 1

* fix: type fixes, part 2

* build: throw non-tsc related error

* build: bump eslint related packages and remove unused deps

* fix: import and whitespace errors

* fix: workaround borked function-paren-newline rule

* fix(atsu): default return

* fix: Use ApproachType declaration rather than WT-specific type

* build: add bundles/ to .eslintignore

---------

Co-authored-by: Michael Corcoran <tracer@outlook.co.nz>
Co-authored-by: Saschl <19493808+Saschl@users.noreply.github.com>

--- a/fbw-a32nx/src/systems/tsconfig.json
+++ b/fbw-a32nx/src/systems/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2017",
     "baseUrl": ".",
     "resolveJsonModule" : true,
+    "skipLibCheck": true,
     "typeRoots": [
-      "../../../fbw-common/src/typings",
-      "../../../node_modules/@types"
+      "../../../fbw-common/src/typings"
     ],
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
@@ -24,7 +24,7 @@
       "@shared/*": ["./shared/src/*"],
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
-      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"]
+      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"],
     }
   },
 }
