--- a/.github/workflows/experimental.yml
+++ b/.github/workflows/experimental.yml
@@ -33,7 +33,7 @@ jobs:
           echo VITE_BUILD=false >> .env
       - name: Build A32NX
         run: |
-          ./scripts/dev-env/run.sh ./scripts/setup.sh
+          ./scripts/dev-env/run.sh ./scripts/setup.sh --clean
           ./scripts/dev-env/run.sh ./scripts/build_a32nx.sh --no-tty -j 4
       - name: Build ZIP files
         run: |
