--- a/.github/workflows/fms-v2.yml
+++ b/.github/workflows/fms-v2.yml
@@ -30,9 +30,11 @@ jobs:
       - name: Build A32NX
         run: |
           ./scripts/dev-env/run.sh ./scripts/setup.sh
-          ./scripts/dev-env/run.sh ./scripts/build.sh --no-tty -j 4
+          ./scripts/dev-env/run.sh ./scripts/build_a32nx.sh --no-tty -j 4
+          rm -rf fbw-a32nx/src
       - name: Build ZIP files
         run: |
+          df -h
           ./scripts/dev-env/run.sh node ./scripts/fragment_a32nx.js
       - name: Upload to CloudFlare CDN
         env:
