--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -69,6 +69,7 @@ jobs:
         if: github.event.pull_request.auto_merge == false
         run: |
           df -h
+          du -sh .[^.]* * | grep -E "\dG"
           ./scripts/dev-env/run.sh node ./scripts/fragment_a32nx.js
 
           cp ./fbw-a32nx/out/build-modules/modules.json ./fbw-a32nx/out/flybywire-aircraft-a320-neo/install.json
