--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -62,9 +62,9 @@ jobs:
           cat fbw-a32nx/.env
       - name: Build A32NX
         run: |
-          ./scripts/dev-env/run.sh ./scripts/setup.sh --clean
-          ./scripts/dev-env/run.sh ./scripts/build.sh --no-tty -j 4
           rm -rf fbw-a32nx/src
+          ls -la
+          du -Sh | sort -rh | head -5
       - name: Generate install.json
         if: github.event.pull_request.auto_merge == false
         run: |
