--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,7 +26,7 @@ jobs:
     if: github.event.pull_request.draft == false
     steps:
       - name: Checkout source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: test-rust.sh
         run: |
           ./scripts/dev-env/run.sh scripts/test-rust.sh
@@ -48,7 +48,7 @@ jobs:
       A32NX_INSTRUMENTS_BUILD_WORKERS: 2
     steps:
       - name: Checkout source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Create .env file
         run: |
           echo A32NX_PRODUCTION_BUILD=1 >> fbw-a32nx/.env
@@ -62,8 +62,9 @@ jobs:
           cat fbw-a32nx/.env
       - name: Build A32NX
         run: |
+          ./scripts/dev-env/run.sh ./scripts/setup.sh --clean
+          ./scripts/dev-env/run.sh ./scripts/build.sh --no-tty -j 4
           rm -rf fbw-a32nx/src
-          ls -la
           du -Sh | sort -rh | head -5
       - name: Generate install.json
         if: github.event.pull_request.auto_merge == false
