fix: revert env

--- a/fbw-a32nx/.env
+++ b/fbw-a32nx/.env
@@ -1,5 +1,5 @@
 VITE_BUILD=false
 NODE_ENV=production
-CLIENT_SECRET="Gj87HjKMfHd983WM978Kdhqos3kjsdO4bc3"
-CLIENT_ID="fbw-a32nx"
+CLIENT_SECRET=""
+CLIENT_ID=""
 SENTRY_DSN=""
