bugfixes after fmgc merge

--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "@flybywiresim/react-components": "^0.3.1",
     "@flybywiresim/tailwind-config": "^0.5.0",
     "@localazy/cli": "^1.6.0",
+    "@microsoft/msfs-sdk": "^0.6.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@rollup/plugin-json": "^4.1.0",
     "@sentry/browser": "^6.17.7",
@@ -160,7 +161,7 @@
     "i18next": "^21.6.14",
     "lodash": "^4.17.20",
     "msfs-geo": "^0.1.0-alpha3",
-    "@microsoft/msfs-sdk": "^0.6.0",
+    "msfs-navdata": "^1.2.4",
     "nanoid": "^3.3.1",
     "network": "^0.6.1",
     "qrcode.react": "^1.0.1",
