--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@
 /fbw-a380x/*
 /fbw-a380x/.env.local
 !/fbw-a380x/README.md
+!/fbw-a380x/mach.config.js
 !/fbw-a380x/docs/
 !/fbw-a380x/docs/**
 !/fbw-a380x/src/**
