--- a/.github/workflows/pr-target.yml
+++ b/.github/workflows/pr-target.yml
@@ -8,9 +8,10 @@ on:
       - ready_for_review
 
 jobs:
-  title:
+  main:
+    name: Validate title semantics.
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v3.1.0
+      - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
