ci: Added two new types of triggers

--- a/.github/workflows/pr-target.yml
+++ b/.github/workflows/pr-target.yml
@@ -3,9 +3,12 @@ on:
   pull_request_target:
     types:
       - opened
+      - edited
       - synchronize
       - reopened
+      - converted_to_draft
       - ready_for_review
+      - review_requested
 
 jobs:
   main:
