refactor: move ND to fbw-common

--- a/fbw-common/src/systems/instruments/src/ND/tsconfig.json
+++ b/fbw-common/src/systems/instruments/src/ND/tsconfig.json
@@ -27,8 +27,7 @@
       "@shared/*": ["./shared/src/*"],
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
-      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"],
-      "@flybywiresim/navigation-display": ["../../../fbw-common/src/systems/instruments/src/ND/index.ts"]
+      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"]
     }
   }
 }
