--- a/fbw-a380x/src/systems/tsconfig.json
+++ b/fbw-a380x/src/systems/tsconfig.json
@@ -8,10 +8,11 @@
             "@shared/*": ["./shared/src/*"],
             "@instruments/common/*": ["./instruments/src/Common/*"],
             "@atsu/*": ["./atsu/src/*"],
-            "@fmgc/*": ["./fmgc/src/*"],
+            "@fmgc/*": ["../../../fbw-a32nx/src/systems/fmgc/src/*"],
             "@flybywiresim/failures": ["failures"],
+            "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"],
             "@tcas/*": ["./tcas/src/*"],
-            "@typings/*": ["../typings"]
+            "@typings/*": ["../typings"],
         }
     }
 }
