--- a/fbw-a32nx/src/systems/instruments/src/EFB/config.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/config.json
@@ -1,11 +1,9 @@
 {
+    "name": "EFB",
     "index": "./index.tsx",
     "isInteractive": true,
     "dimensions": {
         "width": 1430,
         "height": 1000
-    },
-    "additionalImports": [
-        "/Pages/VCockpit/Instruments/Shared/Map/MapInstrument.html"
-    ]
+    }
 }
