--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@types/react-dom": "~17.0.8",
     "@types/react-router-dom": "~5.1.7",
     "@types/semver": "^7.3.13",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "~6.7.4",
     "@typescript-eslint/parser": "~6.7.4",
     "@vitejs/plugin-react": "^1.2.0",
@@ -148,7 +149,6 @@
     "@localazy/cli": "^1.6.0",
     "@react-hook/mouse-position": "~4.1.0",
     "@reduxjs/toolkit": "^1.6.2",
-    "@rollup/plugin-json": "^4.1.0",
     "@sentry/browser": "^6.17.7",
     "@sentry/integrations": "^6.17.7",
     "@sentry/tracing": "^6.17.7",
@@ -189,7 +189,6 @@
     "sass": "^1.45.1",
     "semver": "^7.3.8",
     "simple-keyboard-layouts": "^3.1.32",
-    "tailwindcss": "^2.2.2",
     "use-events": "^1.4.2",
     "use-long-press": "^1.1.2",
     "uuid": "^9.0.0",
