wip: implemented the bare minimum of basic efb function in msfs instrument sdk

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -122,7 +122,7 @@ size_mm = 1430,1000
 pixel_size = 1430,1000
 texture = $EFB
 
-htmlgauge00 = A32NX/EFB/efb.html?Airframe=A320_251N, 0,0,1430,1000
+htmlgauge00 = A32NX/EFBv4/efbv4.html?Airframe=A320_251N, 0,0,1430,1000
 
 [VCockpit17]
 size_mm = 0,0
