--- a/fbw-a380x/src/systems/instruments/src/PFD/tsconfig.json
+++ b/fbw-a380x/src/systems/instruments/src/PFD/tsconfig.json
@@ -12,6 +12,16 @@
     "moduleResolution": "node" /* Enables compatibility with MSFS SDK bare global imports */,
     "jsxFactory": "FSComponent.buildComponent" /* Required for FSComponent framework JSX */,
     "jsxFragmentFactory": "FSComponent.Fragment" /* Required for FSComponent framework JSX */,
-    "jsx": "react" /* Required for FSComponent framework JSX */
+    "jsx": "react", /* Required for FSComponent framework JSX */
+    "paths": {
+      "@shared/*": ["./shared/src/*"],
+      "@instruments/common/*": ["./instruments/src/Common/*"],
+      "@atsu/*": ["./atsu/src/*"],
+      "@fmgc/*": ["./fmgc/src/*"],
+      "@flybywiresim/failures": ["failures"],
+      "@tcas/*": ["./tcas/src/*"],
+      "@typings/*": ["../typings"],
+      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"]
+    }
   }
 }
